fix: adjust HomeCategories component layout for improved spacing and visibility; update global margin-top styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -180,7 +180,7 @@ body {
   }
 
   .commonMT{
-    @apply mt-[80px] md:mt-[90px]
+    @apply mt-[50px] md:mt-[90px]
   }
 
 }
